# chatterer

./: .gitignore  Dockerfile  README.md  docker-compose.traefik.yml  docker-compose.yml  pyproject.toml
src/: app.py  auth.py  conf.py  context.py  main.py
